# myfitself

./: .env-example  .rules  Cargo.toml  Justfile  docker-compose.yml
api/: Cargo.toml
api/migrations/: 20250409235654_init.down.sql  20250409235654_init.up.sql
api/src/: error.rs  main.rs
api/src/handlers/: auth.rs
api/src/middlewares/: mod.rs
api/src/models/: foods.rs  mod.rs  users.rs
api/src/routes/: aggregator.rs  auth.rs  mod.rs  search.rs
api/src/services/: clerk.rs  mod.rs  search.rs
food-aggregator/: Cargo.toml
food-aggregator/src/: aggregate_metadata_model.rs  lib.rs  sources.rs  supervisor.rs
food-aggregator/src/models/: aggregation_metadata.rs  food_nutrients.rs  food_sources.rs  foods.rs  mod.rs  nutrients.rs  units.rs  wweia_categories.rs
food-aggregator/src/usda/: mod.rs  usda_client.rs  usda_types.rs
