[workspace]
resolver = "2"
members = [
    "food-aggregator",
    "api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
api = { path = "api" }
food-aggregator = { path = "food-aggregator" }

tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
anyhow = "1.0.97"
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.40", features = ["serde"] }

[workspace.lints.rust]
rust_2018_idioms = "deny"
