[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
clerk-rs = { version = "0.4.1", features = ["axum"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
