[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true

axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
clerk-rs = { version = "0.4.1", features = ["axum"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
