[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
food-aggregator.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
derive_more.workspace = true
sqlx.workspace = true
chrono.workspace = true

axum = "0.8.3"
clerk-rs = { version = "0.4.1", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
