[package]
name = "food-aggregator"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
chrono.workspace = true

governor = { version = "0.10.0" }
reqwest = { version = "0.12.18", features = ["json"] }
